# Proj_CG

./: engine.cpp
Fase_1/Source/: generator.cpp
Fase_1/Source/3d_files/: box.3d  cone.3d  plane.3d  sphere.3d
Fase_1/Source/code/: CMakeLists.txt
Fase_1/Source/xml/configs/: help.txt  xmlconf.xml
Fase_2/: CG_fase_2.tex  G_09_fase_2.tex
Fase_2/Source/3d_files/: ring.3d
Fase_2/Source/code/: CMakeLists.txt  engine.cpp
Fase_2/Source/xml/extra_configs/: xmlconf.xml
Fase_2/Source/xml/extra_configs/solarSystem/: xmlconf.xml
Fase_2/Source/xml/extra_configs/trans_cone&sphere/: xmlconf.xml
Fase_2/Source/xml/extra_configs/trans_rot_sphere/: xmlconf.xml
Fase_2/Source/xml/extra_configs/trans_sphere&cone/: xmlconf.xml
Fase_3/Relatório/: CG_09_fase_3.tex  CG_fase_3.tex  G_fase_3.tex
Fase_3/Source/: generator.cpp
Fase_3/Source/code/: CMakeLists.txt  engine.cpp
Fase_3/Source/xml/: xmlconf.xml
Fase_4/Relatório/: CG_fase_4.tex  rel.tex
Fase_4/Source/: generator.cpp
Fase_4/Source/Fig&Tex/figs/: box.3d  plane.3d  ring.3d  sphere.3d
Fase_4/Source/code/: CMakeLists.txt  engine.cpp
Fase_4/Source/xml/: xmlconf.xml
Fase_4/Source/xml/config/: xmlconf.xml
Src/: generator.cpp
Src/XML/configs/: xmlconf.xml
Src/code/: engine.cpp
